<!--
  ~ Copyright (C) 2015, Zentri, Inc. All Rights Reserved.
  ~
  ~ The Zentri BLE Android Libraries and Zentri BLE example applications are provided free of charge
  ~ by Zentri. The combined source code, and all derivatives, are licensed by Zentri SOLELY for use
  ~ with devices manufactured by Zentri, or devices approved by Zentri.
  ~
  ~ Use of this software on any other devices or hardware platforms is strictly prohibited.
  ~ THIS SOFTWARE IS PROVIDED BY THE AUTHOR AS IS AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING,
  ~ BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
  ~ PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
  ~ INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
  ~ PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
  ~ INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
  ~ LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  ~ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="ack.me.yackme_android.DeviceInfoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:title="Toolbar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/adc_value_title"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:id="@+id/adc_value"
        android:gravity="left"
        android:layout_below="@id/toolbar"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gpio_value_title"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:id="@+id/gpio_value"
        android:gravity="left"
        android:layout_below="@+id/adc_value"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_button_text"
        android:id="@+id/update_button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/gpio_value"/>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/led_button"
        android:textOff="LED OFF"
        android:textOn="LED ON"
        android:layout_below="@+id/gpio_value"
        android:layout_above="@+id/textToSend"
        android:layout_alignTop="@id/update_button"
        android:layout_toRightOf="@id/update_button"
        android:layout_marginLeft="20dp"/>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/modeButton"
        android:textOff="Command"
        android:textOn="Stream"
        android:checked="false"
        android:layout_alignTop="@+id/led_button"
        android:layout_alignEnd="@+id/gpio_value"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_data_button_text"
        android:background="@drawable/zentri_button"
        android:textColor="@drawable/zentri_button_text"
        android:id="@+id/sendTextButton"
        android:layout_alignBottom="@+id/textToSend"
        android:layout_alignEnd="@+id/gpio_value"
        android:layout_alignTop="@+id/textToSend"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textToSend"
        android:hint="@string/send_data_hint"
        android:maxLength="255"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/sendTextButton"
        android:layout_below="@+id/update_button"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/receivedDataBox"
        android:background="@drawable/textview_back"
        android:padding="10dp"
        android:hint="@string/receive_data_hint"
        android:textColor="@color/white"
        android:layout_below="@+id/textToSend"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"/>

</RelativeLayout>
